testsuite/tests/builtins/pattern_methods/find/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(p.find("word", haystack="word"))
   │       ───────────────┬───────────────  
   │                      ╰───────────────── The parameter "haystack" has been provided a positional and a named value
───╯
